# auth_proxy

./: .gitignore  Cargo.toml  Dockerfile  configuration.toml  database.sqlite3  flake.nix
.github/workflows/: docker-publish.yml
migrations/: 20250729125733_user_schema.sql  20250729125800_authorised_scheme.sql
pages/: login.html
src/: cli.rs  configuration.rs  data.rs  database.rs  forward.rs  main.rs
src/cli/: async_read.rs  mod.rs
