[package]
name = "auth_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = { version = "4.11.0" }
argon2 = { version = "0.5.3", features = ["std"] }
awc = "3.7.0"
config = "0.15.13"
duration-str = { version = "0.17.0", default-features = false, features = [
  "serde",
  "calc",
] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["io-std", "fs", "io-util", "macros"] }
url = "2.5.4"
zeroize = "1.8.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6.4"

# futures-util = "0.3.31"
# reqwest = { version = "0.12.22", features = ["json", "stream"] }
# tokio = "1.47.0"
# tokio-stream = { version = "0.1.17", features = ["sync"] }
